// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`logs to stderr if fetch network-errors 1`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Failed to contact GitHub API: TypeError: Only absolute URLs are supported",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Failed to contact GitHub API: TypeError: Only absolute URLs are supported",
    "stdout": "",
  },
}
`;

exports[`logs to stderr if fetch network-errors 2`] = `Array []`;

exports[`logs to stderr if response comes back non-200 1`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}

Response: {\\"status\\":404,\\"body\\":{\\"data\\":{\\"repository\\":{\\"ref\\":{\\"associatedPullRequests\\":{}}}}}}

TypeError: Cannot read property 'repository' of undefined",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}

Response: {\\"status\\":404,\\"body\\":{\\"data\\":{\\"repository\\":{\\"ref\\":{\\"associatedPullRequests\\":{}}}}}}

TypeError: Cannot read property 'repository' of undefined",
    "stdout": "",
  },
}
`;

exports[`logs to stderr if response comes back non-200 2`] = `
Array [
  Array [
    Object {
      "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}",
      "method": "POST",
    },
  ],
  Array [
    Object {
      "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}",
      "method": "POST",
    },
  ],
]
`;

exports[`logs to stderr some PR env vars exist but not all of them 1`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: new-genesis/orion
        instead of:        apokolips/darkseid


Found no pull requests on GitHub for nonexistent/branch.",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: new-genesis/orion
        instead of:        apokolips/darkseid


Found no pull requests on GitHub for nonexistent/branch.",
    "stdout": "",
  },
}
`;

exports[`logs to stderr some PR env vars exist but not all of them 2`] = `
Array [
  Array [
    Object {
      "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/nonexistent/branch\\"
  }
}",
      "method": "POST",
    },
  ],
  Array [
    Object {
      "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/nonexistent/branch\\"
  }
}",
      "method": "POST",
    },
  ],
]
`;

exports[`logs to stderr that PR env vars are already set and exits 1`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
}
`;

exports[`logs to stderr that PR env vars are already set and exits 2`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
}
`;

exports[`logs to stderr that PR env vars are already set and exits 3`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
}
`;

exports[`logs to stderr that PR env vars are already set and exits 4`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "No change: CircleCI has already populated pull request variables
for this build, so 'danger ci' should run as expected.

Pull Request: https://github.com/someOwner/someRepo/pulls/4 from darkseid",
    "stdout": "",
  },
}
`;

exports[`logs to stderr that PR env vars are already set and exits 5`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: darkseid/undefined
        instead of:        undefined/undefined


Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: darkseid/undefined
        instead of:        undefined/undefined


Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
}
`;

exports[`logs to stderr that PR env vars are already set and exits 6`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: darkseid/undefined
        instead of:        undefined/undefined


Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: darkseid/undefined
        instead of:        undefined/undefined


Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
}
`;

exports[`logs to stderr that PR env vars are already set and exits 7`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: darkseid/undefined
        instead of:        undefined/undefined


Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Some pull request environment variables are present, and others
are not. DangerCI may not correctly identify this as a pull request. Check the
CircleCI \\"Spin up environment\\" step to see build environment variables.

        Pull request from: darkseid/undefined
        instead of:        undefined/undefined


Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
}
`;

exports[`logs to stderr when graphql and/or github tokens are not in env 1`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "No GITHUB_GRAPHQL_ENDPOINT present in environment.
Cannot call GitHub to populate missing PR variables.
Failed to contact GitHub API: TypeError: Only absolute URLs are supported",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "No GITHUB_GRAPHQL_ENDPOINT present in environment.
Cannot call GitHub to populate missing PR variables.
Failed to contact GitHub API: TypeError: Only absolute URLs are supported",
    "stdout": "",
  },
}
`;

exports[`logs to stderr when graphql and/or github tokens are not in env 2`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "No DANGER_GITHUB_API_TOKEN present in environment.
Cannot call GItHub to populate missing PR variables.
Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "No DANGER_GITHUB_API_TOKEN present in environment.
Cannot call GItHub to populate missing PR variables.
Failed to find and export pull request variables using the GitHub
API. Check the environment setup step to see what env vars were provided.

Request: {
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"ref\\": \\"refs/heads/undefined\\"
  }
}

Response: No mock response configured for this test run

Error: HTTP 400",
    "stdout": "",
  },
}
`;

exports[`writes script that sets env vars to stdout if pr exists 1`] = `
Object {
  "childProcess": Object {
    "status": 0,
    "stderr": "Acquired missing pull request data from GitHub. This is PR #420.
 URL: https://github.com/found/me. Added environment variables:

CI_PULL_REQUEST=\\"https://github.com/found/me\\"
CI_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUEST=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PR_NUMBER=\\"420\\"",
    "stdout": "CI_PULL_REQUEST=\\"https://github.com/found/me\\"
CI_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUEST=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PR_NUMBER=\\"420\\"",
  },
  "inProcess": Object {
    "status": 0,
    "stderr": "Acquired missing pull request data from GitHub. This is PR #420.
 URL: https://github.com/found/me. Added environment variables:

CI_PULL_REQUEST=\\"https://github.com/found/me\\"
CI_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUEST=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PR_NUMBER=\\"420\\"",
    "stdout": "CI_PULL_REQUEST=\\"https://github.com/found/me\\"
CI_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUEST=\\"https://github.com/found/me\\"
CIRCLE_PULL_REQUESTS=\\"https://github.com/found/me\\"
CIRCLE_PR_NUMBER=\\"420\\"",
  },
}
`;

exports[`writes script that sets env vars to stdout if pr exists 2`] = `
Array [
  Array [
    Object {
      "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}",
      "method": "POST",
    },
  ],
  Array [
    Object {
      "body": "{
  \\"query\\": \\"query getPR($owner: String!, $name: String!, $ref: String!) {\\\\n        repository(owner: $owner, name: $name) {\\\\n          ref(qualifiedName: $ref) {\\\\n            associatedPullRequests(last: 1) {\\\\n              nodes {\\\\n                url\\\\n                number\\\\n              }\\\\n            }\\\\n          }\\\\n        }\\\\n      }\\\\n      \\",
  \\"variables\\": {
    \\"owner\\": \\"apokolips\\",
    \\"name\\": \\"darkseid\\",
    \\"ref\\": \\"refs/heads/missing/branch\\"
  }
}",
      "method": "POST",
    },
  ],
]
`;
